@@ -1,3 +1,8 @@
+2008-03-03  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-group.el (gnus-update-group-mark-positions):
+	Use mm-string-to-multibyte.
+
 2008-02-29  Andreas Seltenreich  <andreas@gate450.dyndns.org>
 
 	* nnweb.el (nnweb-google-parse-1): Fix date parsing on articles with
